--- a/index.html
+++ b/index.html
@@ -63,10 +63,90 @@
             </div>
         </div>
     </main>
+    <section class="text-center w-50 m-auto">
+        <div>
+            <div class="accordion" id="accordionExample">
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            How does JavaScript work?
+                        </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <strong>JavaScript is a single-threaded scripting programming language, which means it has a
+                                single Call Stack that enables you to create dynamically updating content, control
+                                multimedia, animate images, and pretty much everything else. Therefore it can do one
+                                thing at a time.</strong> JavaScript is considered a client-side scripting language,
+                            which means that it operates on the user's browser and does not function on an external
+                            device. The JavaScript engine is simply a computer program that
+                            interprets JavaScript code. The engine is responsible for executing the code.
+                            Every major browser has a JavaScript engine that executes JavaScript code.
+                            The call stack is where the code is executed. The heap is an unstructured memory pool that
+                            stores all the objects needed for the application.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            What does JavaScript Event Loop do?
+                        </button>
+                    </h2>
+                    <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <strong>The event loop is the secret mechanism behind JavaScript's asynchronous
+                                programming. JS executes all operations on a single thread, but using a
+                                few smart data structures, it gives us the illusion of multi-threading which 'calls
+                                waiting for execution' in the callback queue/job queue can be put on the call stack. For
+                                any event from the callback queue/job queue to come to call stack, the call stack will
+                                have to be empty.</strong> The Event Loop has one simple job — to monitor the Call Stack
+                            and the
+                            Callback Queue or Message Queue.
+
+                            If the Call Stack is empty, it will take the first event from the
+                            Callback queue and will push it to the Call Stack, which effectively runs it.
+
+                            Such an iteration is called a tick in the Event Loop.
+                            Each event is just a function callback.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            Local-storage VS Session-storage
+                        </button>
+                    </h2>
+                    <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <strong>localStorage data does not expire, whereas sessionStorage data is cleared when the
+                                page session ends.</strong>Local storage: Local storage is the
+                            most recent mechanism. It allows for larger amounts of data to be stored, but the data is
+                            not deleted when the browser is closed. Local storage is useful for storing data that the
+                            user will need to access later, such as offline data.
+                            The client can only read local storage.
+                            <br>
+                            Session storage: Session storage is similar to cookies, but the data is only stored for the
+                            current session. This means that the data will be deleted when the user closes the browser.
+                            Session storage is useful for storing data that is sensitive, such as login credentials.
+                            The client can't read session storage.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <footer></footer>
 
     <!-- add javascript  file  -->
     <script src="./js/app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
